# COLIBRI1

./: CMakeLists.txt  README.md
include/: fileprocessor.h  mainwindow.h
resources/: resources.qrc
src/: fileprocessor.cpp  mainwindow.cpp
ui/: mainwindow.ui
